micromobility_car_navigation/local/Project/dev_ws/log/build_2021-03-15_10-40-18/pathfinding/stderr.log
  File "/home/user/Projects/dev_ws/install/pathfinding/lib/python3.8/site-packages/pathfinding/pathfinding_service.py", line 19
    start_node =
                ^
SyntaxError: invalid syntax

